--- a/src/app/Documentos/gretenciones/gretenciones.component.html
+++ b/src/app/Documentos/gretenciones/gretenciones.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <!--Primer panel Emisor-->
     <div class="panel panel-primary">
-      <div class="panel-heading" id="panels">Emisor</div>
+      <div class="panel-heading" id="panels"><font style="font-size: 15px">Emisor</font></div>
           <div class="panel-body">
   
               <form class="form-inline" role="form-horizontal">
@@ -110,7 +110,7 @@
   
     <!--Segundo panel Receptor-->
     <div class="panel panel-primary">
-      <div class="panel-heading" id="panels">Receptor</div>
+      <div class="panel-heading" id="panels"><font style="font-size: 15px">Receptor</font></div>
           <div class="panel-body">
               <form class="form-inline" role="form-horizontal">
                   <div class="col-md-12 col-lg-12">
@@ -147,7 +147,7 @@
   
     <!--Tercer panel Periodo-->
     <div class="panel panel-primary">
-      <div class="panel-heading" id="panels">Periodo</div>
+      <div class="panel-heading" id="panels"><font style="font-size: 15px">Periodo</font></div>
           <div class="panel-body">
               <form class="form-inline" role="form-horizontal">
                   <div class="col-md-12 col-lg-12">
@@ -200,7 +200,7 @@
   
       <!--Cuarto panel Periodo-->
       <div class="panel panel-primary">
-          <div class="panel-heading" id="panels">Impuestos</div>
+          <div class="panel-heading" id="panels"><font style="font-size: 15px">Impuestos</font></div>
               <div class="panel-body">
                   <form class="form-inline" role="form-horizontal">
                       <div class="col-md-12 col-lg-12">
