--- a/src/app/Registro/cfdi33/cfdi33.component.html
+++ b/src/app/Registro/cfdi33/cfdi33.component.html
@@ -1,7 +1,7 @@
 <!--primer panel-->
 <div class="container">
     <div class="panel panel-primary">
-    <div class="panel-heading" id="panels">Filtrado de componentes fidcales digitales</div>
+    <div class="panel-heading" id="panels"><font style="font-size: 15px">Filtrado de componentes fidcales digitales</font></div>
          <div class="panel-body">
             
             <form>
@@ -60,6 +60,9 @@
     
             <form>
                 <div class="row">
+                    <div></div>
+                    &nbsp;
+                    &nbsp;
                 <div class="b">
                     
                 <div class="col-lg-4 form-group">
@@ -175,6 +178,7 @@
                 &nbsp;
                 &nbsp;
                 &nbsp;
+                &nbsp;
     
     
                 <div class="b" id="bo">
@@ -213,6 +217,8 @@
                 &nbsp;
                 &nbsp;
                 &nbsp;
+                &nbsp;
+                
     
                 <div class="b">
     
@@ -266,11 +272,17 @@
     
     <!--Segundo panel-->
     <div class="panel panel-primary">
-    <div class="panel-heading" id="panels">Comprobantes fiscales digitales emitidos</div>
+    <div class="panel-heading" id="panels"><font style="font-size: 15px">Comprobantes fiscales digitales emitidos</font></div>
          <div class="panel-body">
             
             <form>
                 <div class="row">
+                        <div></div>
+                        &nbsp;
+                        &nbsp;
+                        &nbsp;
+                        &nbsp;
+                        &nbsp;
                 <div class="b">
                     
                <div>
