--- a/src/app/Registro/retenciones/retenciones.component.html
+++ b/src/app/Registro/retenciones/retenciones.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <!--Primer panel-->    
   <div class="panel panel-primary">
-  <div class="panel-heading" id="panels">Filtrado de componentes fidcales digitales</div>
+  <div class="panel-heading" id="panels"><font style="font-size: 15px">Filtrado de componentes fidcales digitales</font></div>
        <div class="panel-body">
           
           <form>
@@ -27,6 +27,12 @@
   
           <form>
               <div class="row">
+                    <div></div>
+                    &nbsp;
+                    &nbsp;
+                    &nbsp;
+                    &nbsp;
+                    &nbsp;
               <div class="b">
                   
               <div class="col-lg-4 form-group">
@@ -213,11 +219,17 @@
   
    <!-- segundo panel-->
    <div class="panel panel-primary">
-  <div class="panel-heading" id="panels">Comprobantes retenciones emitidos</div>
+  <div class="panel-heading" id="panels"><font style="font-size: 15px">Comprobantes retenciones emitidos</font></div>
        <div class="panel-body">
           
           <form>
               <div class="row">
+                    <div></div>
+                    &nbsp;
+                    &nbsp;
+                    &nbsp;
+                    &nbsp;
+                    &nbsp;
               <div class="b">
                   
              <div>
