--- a/src/app/Catalogos/empleados/empleados.component.html
+++ b/src/app/Catalogos/empleados/empleados.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 	<!-- Primer panel Emisor -->   
 			<div class="panel panel-primary">
-					<div class="panel-heading" id="panels">Emisor</div>
+					<div class="panel-heading" id="panels"><font style="font-size: 15px">Emisor</font></div>
 					<div class="panel-body d-flex justify-content-center"> 
 	
 					
@@ -69,7 +69,7 @@
 			
 	<!--Segundo panel Empleado-->
 	<div class="panel panel-primary">
-		<div class="panel-heading" id="panels">Empleado</div>
+		<div class="panel-heading" id="panels"><font style="font-size: 15px">Empleado</font></div>
 			 <div class="panel-body d-flex justify-content-center">
 					<div class="c"> <p></p>
 
@@ -721,10 +721,10 @@
 	
 	
 	</div>
-			
-	 <!-- Tercer panel Totales-->   
+		
+<!------------------------------------Tercer panel Totales----------------------------------------------->   
 						<div class="panel panel-primary">
-									<div class="panel-heading" id="panels">Totales</div>
+									<div class="panel-heading" id="panels"><font style="font-size: 15px">Totales</font></div>
 	
 									<div class="panel-body"> 
 									<div class="form-horizontal">
@@ -782,7 +782,7 @@
 								 </div>
 								</div>
 			
-	<!-- Cuarto panel-->    
+<!--------------------------------------- Cuarto panel---------------------------------------->    
 							 <div class="panel panel-primary">
 											<div class="panel-heading" id="panels"></div>
 											 <div id="panel" class="panel-body">
@@ -795,9 +795,9 @@
 											 </div>
 								 </div>
 							
-	<!--Quinto panel Filtrado Empleado-->
+<!-------------------------------------------Quinto panel Filtrado Empleado------------------------->
 								 <div class="panel panel-primary">
-											<div class="panel-heading" id="panels">Filtrado de empleados 1.2</div>
+											<div class="panel-heading" id="panels"><font style="font-size: 15px">Filtrado de empleados 1.2</font></div>
 											<div class="panel-body"> 
 													<div class="form-horizontal">
 															<div class="col-sm-4">
@@ -829,9 +829,9 @@
 								 </div>
 	
 	
-	<!--Sexto panel Catalogo empleado-->
+<!-----------------------------------------Sexto panel Catalogo empleado----------------------------->
 								 <div class="panel panel-primary">
-									 <div class="panel-heading" id="panels">Catálogo de empleados 1.2</div>
+									 <div class="panel-heading" id="panels"><font style="font-size: 15px">Catálogo de empleados 1.2</font></div>
 											<div class="panel-body"> 
 													<button type="button" class="btn btn-success">Agregar empleado</button> <p>
 																	<div class="table">
