--- a/src/app/Documentos/gretenciones/gretenciones.component.html
+++ b/src/app/Documentos/gretenciones/gretenciones.component.html
@@ -4,35 +4,34 @@
       <div class="panel-heading" id="panels"><font style="font-size: 15px">Emisor</font></div>
           <div class="panel-body">
   
-              <form class="form-inline" role="form-horizontal">
-                  <div class="col-md-12 col-lg-12">
+              <form>
                       <div class="row">
   
                         <div class="col-lg-4 form-group">     
-                            <div class="col-lg-5">    
+                            <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">    
                                 <font size="1">*RFC:</font>     
                             </div>
-                            <div class="col-lg-7 form-group">
+                            <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
                                 <input name="rfcReten" 
                                 type="text" class="form-control" placeholder="">
                             </div>                   
                         </div>
   
                         <div class="col-lg-4 form-group">     
-                            <div class="col-lg-5">    
+                            <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">    
                                 <font size="1">Sucursal:</font>     
                             </div>
-                            <div class="col-lg-7 form-group">
+                            <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
                                 <input name="sucursalRenten" 
                                 type="text" class="form-control" placeholder="">
                             </div>                   
                         </div>
   
                         <div class="col-lg-4 form-group">     
-                            <div class="col-lg-5">    
+                            <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">    
                                 <font size="1">*Razón social:</font>     
                             </div>
-                            <div class="col-lg-7 form-group">
+                            <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
                                 <input name="rzReten" 
                                 type="text" class="form-control" placeholder="">
                             </div>                   
@@ -44,20 +43,20 @@
                       <div class="row">
   
                         <div class="col-lg-4 form-group">     
-                            <div class="col-lg-5">    
+                            <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">    
                                 <font size="1">Folio:</font>     
                             </div>
-                            <div class="col-lg-7 form-group">
+                            <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
                                 <input name="folReten" 
                                 type="text" class="form-control" placeholder="">
                             </div>                   
                         </div>
   
                         <div class="col-lg-4 form-group">     
-                            <div class="col-lg-5">    
+                            <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">    
                                 <font size="1">*Tipo de retención:</font>     
                             </div>
-                            <div class="col-lg-7 form-group">
+                            <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
                                 <select name="tipReten" class="custon-select form-control"> 
                                   <option value="" disabled selected>Sin Seleccionar</option>
                                   <option value="">SI</option>
@@ -67,10 +66,10 @@
                         </div>
   
                         <div class="col-lg-4 form-group">     
-                            <div class="col-lg-5">    
+                            <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">    
                                 <font size="1">Fecha:</font>     
                             </div>
-                            <div class="col-lg-7 form-group">
+                            <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
                                   <input type="text" id="fecha7" name="fecha7" class="form-control">
                             </div>                   
                         </div>
@@ -80,10 +79,10 @@
                       <div class="row">
   
                         <div class="col-lg-4 form-group">     
-                            <div class="col-lg-5">    
+                            <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">    
                                 <font size="1">*Clave de retención:</font>     
                             </div>
-                            <div class="col-sm-7 form-group">
+                            <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
                               <select name="claveReten" class="custon-select form-control"> 
                                 <option value="" disabled selected>Sin Seleccionar</option>
                                 <option value="">SI</option>
@@ -93,16 +92,14 @@
                         </div>
   
                         <div class="col-lg-4 form-group">     
-                            <div class="col-lg-5">    
+                            <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">    
                             </div>
-                            <div class="col-lg-7 form-group">
+                            <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
                               <font size="1"><input type="checkbox" value="">Ver información de emisor</font>
                             </div>                   
                         </div>
   
                       </div>
-  
-                  </div>
   
               </form>
           </div>
@@ -112,15 +109,14 @@
     <div class="panel panel-primary">
       <div class="panel-heading" id="panels"><font style="font-size: 15px">Receptor</font></div>
           <div class="panel-body">
-              <form class="form-inline" role="form-horizontal">
-                  <div class="col-md-12 col-lg-12">
+              <form>
                       <div class="row">
   
                         <div class="col-lg-4 form-group">     
-                            <div class="col-lg-5">    
+                            <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">    
                                 <font size="1">*Nacionalidad:</font>     
                             </div>
-                            <div class="col-lg-7 form-group">
+                            <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
                               <select name="nacionReten" class="custon-select form-control"> 
                                 <option value="" disabled selected>Sin Seleccionar</option>
                                 <option value="">SI</option>
@@ -130,17 +126,16 @@
                         </div>
   
                         <div class="col-lg-4 form-group">     
-                            <div class="col-lg-5">    
+                            <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">    
                                 <font size="1">Búsqueda de cliente:</font>     
                             </div>
-                            <div class="col-lg-7 form-group">
+                            <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
                                 <input name="sucursalRenten" 
                                 type="text" class="form-control" placeholder="Criterio de búsqueda">
                             </div>                   
                         </div>   
   
                       </div>
-                  </div>
               </form>
           </div>
     </div>
@@ -149,15 +144,14 @@
     <div class="panel panel-primary">
       <div class="panel-heading" id="panels"><font style="font-size: 15px">Periodo</font></div>
           <div class="panel-body">
-              <form class="form-inline" role="form-horizontal">
-                  <div class="col-md-12 col-lg-12">
+              <form>
                       <div class="row">
   
                         <div class="col-lg-4 form-group">     
-                            <div class="col-lg-5">    
+                            <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">    
                                 <font size="1">*Ejercicio fiscal:</font>     
                             </div>
-                            <div class="col-lg-7 form-group">
+                            <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
                               <select name="ejerFiscPerio" class="custon-select form-control"> 
                                 <option value="" disabled selected>Sin Seleccionar</option>
                                 <option value="">SI</option>
@@ -167,10 +161,10 @@
                         </div>
   
                         <div class="col-lg-4 form-group">     
-                            <div class="col-lg-5">    
+                            <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">    
                                 <font size="1">*Mes inicial:</font>     
                             </div>
-                            <div class="col-lg-7 form-group">
+                            <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
                                 <select name="mesInicPerio" class="custon-select form-control"> 
                                   <option value="" disabled selected>Sin Seleccionar</option>
                                   <option value="">SI</option>
@@ -180,10 +174,10 @@
                         </div>
                         
                         <div class="col-lg-4 form-group">     
-                            <div class="col-lg-5">    
+                            <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">    
                                 <font size="1">*Mes final:</font>     
                             </div>
-                            <div class="col-lg-7 form-group">
+                            <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
                                 <select name="mesFinalPerio" class="custon-select form-control"> 
                                   <option value="" disabled selected>Sin Seleccionar</option>
                                   <option value="">SI</option>
@@ -193,7 +187,6 @@
                         </div>
   
                       </div>
-                  </div>
               </form>
           </div>
     </div>
@@ -202,25 +195,24 @@
       <div class="panel panel-primary">
           <div class="panel-heading" id="panels"><font style="font-size: 15px">Impuestos</font></div>
               <div class="panel-body">
-                  <form class="form-inline" role="form-horizontal">
-                      <div class="col-md-12 col-lg-12">
+                  <form>
                           <div class="row">
       
                             <div class="col-lg-4 form-group">     
-                                <div class="col-lg-5">    
+                                <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">    
                                     <font size="1">Base retención:</font>     
                                 </div>
-                                <div class="col-lg-7 form-group">
+                                <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
                                   <input name="rzReten" 
                                   type="text" class="form-control" placeholder="0.000000">
                                 </div>                   
                             </div>
       
                             <div class="col-lg-4 form-group">     
-                                <div class="col-lg-5">    
+                                <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">    
                                     <font size="1">Tipo de impuesto:</font>     
                                 </div>
-                                <div class="col-lg-7 form-group">
+                                <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
                                     <select name="tipImpuesPerio" class="custon-select form-control"> 
                                       <option value="" disabled selected>Sin Seleccionar</option>
                                       <option value="">SI</option>
@@ -230,17 +222,16 @@
                             </div>
                             
                             <div class="col-lg-4 form-group">     
-                                <div class="col-lg-5">    
+                                <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">    
                                     <font size="1">Monto retención:</font>     
                                 </div>
-                                <div class="col-lg-7 form-group">
+                                <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
                                   <input name="rzReten" 
                                   type="text" class="form-control" placeholder="0.000000"> 
                                 </div>                   
                             </div>
       
                           </div>
-                      </div>
                   </form>
               </div>
         </div>
