--- a/src/app/Catalogos/productos/productos.component.html
+++ b/src/app/Catalogos/productos/productos.component.html
@@ -15,7 +15,7 @@
 	 <div class="panel panel-primary">
 	  <div class="panel-heading" id="panels"><font style="font-size: 15px">Productos</font></div>
 	  <div class="panel-body">
-		<button type="button" class="btn btn-success" data-toggle="collapse" data-target="#newProduct">Nuevo producto</button> <p>
+		<button type="button" class="btn btn-success" data-toggle="modal" data-target="#newProduct">Nuevo producto</button> <p>
 
 	
 		  <div class="modal fade" id="newProduct" tabindex="-1" role="dialog" aria-labelledby="newProductLabel" aria-hidden="true">
