--- a/src/app/Documentos/gcfdi33/gcfdi33.component.html
+++ b/src/app/Documentos/gcfdi33/gcfdi33.component.html
@@ -1,4 +1,3 @@
-<div><h1>Generar CFDI33</h1></div>
 
 <div class="container">
     <div class="panel panel-primary">
@@ -47,11 +46,12 @@
       
                        <div class="col-lg-4 form-group">       
                            <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
-                             <font size="1">Serie:</font> 
+                             <font size="1">
+                                 Serie:
+                             </font> 
                            </div>
                            <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
-                               <input name="serie" 
-                               type="text" class="form-control"> 
+                               <input name="serie" type="text" class="form-control"> 
                            </div>                    
                        </div>
       
@@ -108,7 +108,7 @@
                                <font size="1">*Fecha:</font>    
                            </div>
                            <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
-                                <input class="form-control" type="text" id="fecha" name="fecha" />
+                                <input class="form-control" type="text" id="fecha" name="fecha">
                            </div>   
                        </div>
       
