--- a/src/app/Documentos/gcfdi33/gcfdi33.component.html
+++ b/src/app/Documentos/gcfdi33/gcfdi33.component.html
@@ -108,10 +108,10 @@
                                <font size="1">*Fecha:</font>    
                            </div>
                            <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
-                                <input class="form-control" type="text" id="fecha" name="fecha">
+                               <!-- <input class="form-control" type="text" id="fecha" name="fecha">-->
                            </div>   
                        </div>
-      
+
                     </div>
                  
                     <div class="row">
