--- a/src/app/Catalogos/productos/productos.component.html
+++ b/src/app/Catalogos/productos/productos.component.html
@@ -15,11 +15,11 @@
 	 <div class="panel panel-primary">
 	  <div class="panel-heading" id="panels"><font style="font-size: 15px">Productos</font></div>
 	  <div class="panel-body">
-		<button type="button" class="btn btn-success" data-toggle="modal" data-target="#newProduct">Nuevo producto</button> <p>
+		<button type="button" class="btn btn-success" data-backdrop="false"  data-toggle="modal" data-target="#newProduct">Nuevo producto</button> <p>
 
-	
-		  <div class="modal fade" id="newProduct" tabindex="-1" role="dialog" aria-labelledby="newProductLabel" aria-hidden="true">
-			<div class="modal-dialog modal-lg">
+			
+		  <div class="modal fade" id="newProduct" tabindex="-1" role="dialog" aria-labelledby="newProductLabel" aria-hidden="true"   style="z-index: 1041">
+			<div class="modal-dialog ">
 			  <div class="modal-content">
 	
 						<div class="panel-heading" id="newProductLabel">Nuevo producto</div>
@@ -143,9 +143,9 @@
 				 
 			   </tr>
 			 </tbody>
-		   </table>
-	
+			 </table>
 		 </div>
+		 
 	</div>
 	</div>
 		  
