--- a/src/app/Catalogos/productos/productos.component.scss
+++ b/src/app/Catalogos/productos/productos.component.scss
@@ -135,3 +135,12 @@
 		font-size: 15px;
 		color: #FFF;
 	 }
+
+	 #newProduct{
+		 z-index: 1500;
+	 }
+
+
+.modal-backdrop {
+position: relative;
+}
