--- a/src/app/Registro/retenciones/retenciones.component.html
+++ b/src/app/Registro/retenciones/retenciones.component.html
@@ -34,7 +34,7 @@
                     &nbsp;
                     &nbsp;
               <div class="b">
-                  
+
               <div class="col-lg-4 form-group">
                   <div>
                       <font>Dia</font>
@@ -147,7 +147,7 @@
   &nbsp;
   &nbsp;
               <div class="b">
-                  
+                  &nbsp;
               <div>
                   <div class="col-lg-5">
                       <font>Por sucursal</font>
@@ -200,7 +200,7 @@
                               Razon social
                           </font>
                       </div>
-                      <div class="col-sm-7">
+                      <div class="col-lg-4">
                           <input type="text" name="Rso" class="form-control" id="Rsocial" placeholder="0042 MUNICIPIO DE ATLAHUILCO">
                       </div>
                   </div>
@@ -251,7 +251,9 @@
   
               <div>
                   <button type="button" class="btn btn-success" value="">Descargar XML</button>
+                  &nbsp;
                   <button type="button" class="btn btn-success" value="">Descargar PDF</button>
+                  &nbsp;
                   <button type="button" class="btn btn-success" value="">Descargar XML y PDF</button>
               </div>
   
@@ -309,7 +311,11 @@
   
           <br>
           <br>
-          <h6 style="text-align: center;">NO SE ENCONTRARO REGISTROS</h6>
+          <table id="NSER" class="table table-responsive">
+                <tr>
+                    <th>NO SE ENCONTRARON REGISTROS</th>
+                </tr>
+            </table>
           <br>
           <br>
    </div>
