--- a/src/app/Registro/cfdi33/cfdi33.component.html
+++ b/src/app/Registro/cfdi33/cfdi33.component.html
@@ -32,23 +32,23 @@
     
     
                     <div class="form-group">
-                    <div class="col-lg-5">
+                    <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
                         <font> RFC
                         </font>
                     </div>    
-                    <div class="col-sm-7">
+                    <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
                         <input type="text" name="patron" class="form-control" id="patron" placeholder="AAWW890512MVZAVE6"> 
                     </div>
                     </div>
     
     
                     <div class="form-group">
-                    <div class="col-lg-5">
+                    <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
                         <font>
                             Cliente 
                         </font>
                     </div>     
-                    <div class="col-sm-7">
+                    <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
                         <input type="text" name="cli" class="form-control" id="cliente" placeholder="0042 0042-MUICIPIO DE ATLAHUILCO">
                     </div>               
                     </div>
@@ -304,7 +304,9 @@
     
                 <div>
                     <button type="button" class="btn btn-success" value="">Descargar XML</button>
+                    &nbsp;
                     <button type="button" class="btn btn-success" value="">Descargar PDF</button>
+                    &nbsp;
                     <button type="button" class="btn btn-success" value="">Descargar XML y PDF</button>
                 </div>
     
@@ -320,10 +322,12 @@
                 
     
                 <div class="b">
-    
+                        &nbsp;
                     <div>
                         <button type="button" class="btn btn-secondary" value="">Cancelar CFDI</button>
+                        &nbsp;
                         <button type="button" class="btn btn-secondary" value="">Descargar XML cancelacion</button>
+                        &nbsp;
                         <button type="button" class="btn btn-success" value="">Descargar XML envio</button>
                     </div>
                     
