--- a/src/app/Registro/cfdi33/cfdi33.component.html
+++ b/src/app/Registro/cfdi33/cfdi33.component.html
@@ -373,6 +373,8 @@
     
                 <div>
                      <button class="btn btn-success" type="button" value="" style="float: right;">Ver reporte PDF</button>
+                     &nbsp;
+                     &nbsp;
                     <button class="btn btn-success" type="button" value="" style="float: right;">Exportar Excel</button>
                 </div>
     
